--- a/kap2/kap2.tex
+++ b/kap2/kap2.tex
@@ -1,4 +1,22 @@
 \chapter{Reihen}
 
-\section{g}
-g\\
+\begin{Definition}
+Eine Reihe ist eine Folge, deren Glieder die Partialsummen einer anderen Folge ist. Das bedeutet, dass das $n-te$ Glied der Reihe, die Summe der ersten $n$ Glieder einer anderen Folge ist. \\
+Man hat also:
+
+\begin{enumerate} 
+\item Mit Startglied $a_{0}$: $s_{n}=\sum\limits_{i=0}^{n-1}a_{i}$
+\item Mit Startglied $a_{1}$: $s_{n}=\sum\limits_{i=1}^{n}a_{i}$
+\item Mit Startglied $a_{x}$: $s_{n}=\sum\limits_{i=x}^{n+x-1}a_{i}$
+\end{enumerate}
+
+\end{Definition}
+
+\begin{Bemerkung}
+Bemerkung\\
+In manchen Fällen steht $s_{n}$ für die Partialsumme einer anderen Folge bis zum $n-ten$ Glied.
+Dann gilt für ein beliebiges Startglied $a_{x}$ der Folge: $s_{n}=\sum\limits_{i=x}^{n}a_{i}$
+\end{Bemerkung}
+
+		\section{Artithmetische Reihen}
+
