--- a/kap10/kap10.tex
+++ b/kap10/kap10.tex
@@ -1,6 +1,14 @@
 \chapter{Algorythmik}
 sdffzgkzgs\\
 
+	\section{Algorithmen und Programmierung}
 
-	\section{g}
-fljzgkg\\
+		\subsection{Pseudocode}
+
+		\subsection{Python}
+
+	\section{Algorithmen und mathematische Anwendungen}
+
+		\subsection{Newton-Rhapson Verfahren}
+
+		\subsection{Allgemeines Iterationsverfahren}
