Nur damit ich pullen kann

--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -160,30 +160,7 @@
         \begin{minipage}{0.5\textwidth}\paragraph{} Ein Winkel $\alpha$ wird zudem immer so angegeben, dass $\alpha\in I; I = [-\pi,\pi]$ gilt. Dies bedeutet, dass man nur Winkel zwischen $0°$ und $180°$ erhält, und das in beide \glqq Richtungen\grqq, als im mathematisch positiven und negativen Sinn. Diese Einschränkung kennzeichnet man mit dem Ausdruck \glqq modulo $2\pi$\grqq.
         \end{minipage}
         \begin{minipage}{0.3\textwidth}
-        \definecolor{ffzztt}{rgb}{1.,0.6,0.2}
-        \definecolor{ududff}{rgb}{0.30196078431372547,0.30196078431372547,1.}
-        \begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1.0cm,y=1.0cm]
-        \clip(-3.32,-2.22) rectangle (8.28,7.16);
-        \draw [shift={(-1.66,1.84)},line width=1.2pt,color=ffzztt,fill=ffzztt,fill opacity=0.10000000149011612] (0,0) -- (-22.750976342787634:1.2) arc (-22.750976342787634:35.702202191216706:1.2) -- cycle;
-        \draw [shift={(-1.66,1.84)},-<,line width=1.2pt,color=ffzztt] (-22.750976342787634:1.2) arc (-22.750976342787634:35.702202191216706:1.2);
-        \draw [line width=1.2pt] (-1.66,1.84)-- (3.6,5.62);
-        \draw [line width=1.2pt] (1.0674473317121247,3.8000286908501586) -- (1.057535863562698,3.6081908353598435);
-        \draw [line width=1.2pt] (1.0674473317121247,3.8000286908501586) -- (0.8824641364373017,3.8518091646401564);
-        \draw [line width=1.2pt] (-1.66,1.84)-- (3.92,-0.5);
-        \draw [line width=1.2pt] (1.2406633258194237,0.6235927988499189) -- (1.071990998562399,0.5316708427257207);
-        \draw [line width=1.2pt] (1.2406633258194237,0.6235927988499189) -- (1.1880090014376012,0.808329157274279);
-        \begin{scriptsize}
-        \draw [fill=ududff] (3.92,-0.5) circle (2.5pt);
-        \draw[color=ududff] (4.06,-0.13) node {$A$};
-        \draw [fill=ududff] (-1.66,1.84) circle (2.5pt);
-        \draw[color=ududff] (-1.52,2.21) node {$B$};
-        \draw [fill=ududff] (3.6,5.62) circle (2.5pt);
-        \draw[color=ududff] (3.74,5.99) node {$C$};
-        \draw[color=ffzztt] (-0.66,1.99) node {$\alpha$};
-        \draw[color=black] (1.2,3.65) node {$c$};
-        \draw[color=black] (1.06,0.55) node {$a$};
-        \end{scriptsize}
-        \end{tikzpicture}
+        \includegraphics[width=4.7in]{OrientierteWinkel}
         \end{minipage}
 
     \subsection{}
