Funktionsdiskussion Trig. Layout?

--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,7 @@
 \usepackage[ngerman]{babel}
 \usepackage{tabu}                               %Bessere Tabellen
 \usepackage{esvect}
+\usetikzlibrary{arrows}
 
 \pagestyle{fancy}
 \fancyhead{}
