--- a/kap4/kap4.tex
+++ b/kap4/kap4.tex
@@ -1,4 +1,6 @@
 \chapter{Trigonometrie}
+\@fleqntrue
+
 \section{Kurze Wiederholung}
 \begin{Definition}
   Im Kreis mit Radius 1 gelte:\\
@@ -158,38 +160,157 @@ Untersuchen Sie K im Intervall $[0;2\pi]$ auf gemeinsame Punkte mit der $x$-Achs
 \subsection{Definitionsmenge}
   $D=\R$
 \subsection{Periodizität und Amplitude}
+Die Periode von $f$ ist $P=2\pi$. Die Amplitude $A$ beträgt $\dfrac{3}{2}\sqrt{3}$.
 \subsection{Nullstellen}
-  Notwendige & hinreichende Bedingung: $f(x)=0$\\
-  $\Leftrightarrow 2\cos(x)+2\sin(x)\cos(x)=0$\\
-  $\Leftrightarrow 2\cos(x)(1+\sin(x))=0$\\
-  $\Rightarrow^{S.d.N}$
+\subsubsection{Notwendige und hinreichende Bedingung}
+\begin{align*}
+  f(x)&=0\\
+  \Leftrightarrow 2\cos(x)+2\sin(x)\cos(x)&=0\\
+  \Leftrightarrow 2\cos(x)(1+\sin(x))&=0\\
+  \stackrel{S.d.N}{\Rightarrow}
   \left\{\begin{array}{rccl}
-    $2\cos(x)&=&0&$\\
-    $1+\sin(x)&=&0&$
-  \end{array}\right$\\
-  $\Leftrightarrow$
-  $\left\{ \begin{array}{rccl}
-    $\cos(x)&=&0&$\\
-    $\sin(x)&=&-1&$
-  \end{array}\right$\\
-  $\Leftrightarrow$
-  $\left\{ \begin{array}{rccl}
-    $x_1&=&\dfrac{1}{2}\pi&$\\\\
-    $x_2&=&\dfrac{3}{2}\pi&$
-  \end{array}\right$\\
-  $\Rightarrow \mathbb{L}=\{(\dfrac{1}{2}\pi|0);(\dfrac{3}{2}\pi|0)\}$
+    2\cos(x)&=&0&\\
+    1+\sin(x)&=&0&
+  \end{array}\right\\
+  \Leftrightarrow
+  \left\{ \begin{array}{rccl}
+    \cos(x)&=&0&\\
+    \sin(x)&=&-1&
+  \end{array}\right\\
+  \Leftrightarrow
+  \left\{ \begin{array}{rccl}
+    x_1&=&\dfrac{1}{2}\pi&\\\\
+    x_2&=&\dfrac{3}{2}\pi&
+  \end{array}\right\\
+  \Rightarrow \mathbb{L}=\{(\dfrac{1}{2}\pi|0);(\dfrac{3}{2}\pi|0)\}
+\end{align*}
 \subsection{Ableitungen}
-  $\begin{array}{rcl}
-    $f'(x)&=&-2\sin(x)+2(\cos(x)\cos(x)-\sin(x)\sin(x))$\\
-    $&=&-2\sin(x)+2(\cos^2(x)-\sin^2(x))$\\
-    $&=&-2\sin(x)+2(1-\sin^2(x)-\sin^2(x))$\\
-    $&=&-4\sin^2(x)-2\sin(x)+2$
-  \end{array}$\\
-  $\begin{array}{rcl}
-    $f''(x)&=&-4(\cos(x)\sin(x)+\sin(x)\cos(x))-2\cos(x)$\\
-    $&=&-8\sin(x)\cos(x)-2\cos(x)$
-  \end{array}$\\
-  $\begin{array}{rcl}
-    $f'''(x)&=&$\\
-    $&=&$
-  \end{array}$
+  \begin{align*}
+    f'(x)&=-2\sin(x)+2(\cos(x)\cos(x)-\sin(x)\sin(x))\\
+    &=-2\sin(x)+2(\cos^2(x)-\sin^2(x))\\
+    &=-2\sin(x)+2(1-\sin^2(x)-\sin^2(x))\\
+    &=-4\sin^2(x)-2\sin(x)+2\\
+    f''(x)&=-4(\cos(x)\sin(x)+\sin(x)\cos(x))-2\cos(x)\\
+    &=-8\sin(x)\cos(x)-2\cos(x)\\
+    f'''(x)&=-8(\cos(x)\cos(x)-\sin(x)\sin(x))+2\sin(x)\\
+    &=-8(1-\sin^2(x)-\sin^2(x))+2\sin(x)\\
+    &=16\sin^2(x)+2\sin(x)-8
+  \end{align*}\\
+\subsection{Extremstellen}
+\subsubsection{Notwendige Bedingung}
+\begin{align*}
+  f'(x)&=0\\
+  \Leftrightarrow4\sin^2(x)-2\sin(x)+2&=0\\
+  Substitution: y=\sin(x)\\
+  \Rightarrow4y^2-2y+2&=0\\
+  \stackrel{ABC-Formel}{\Rightarrow}y_{1,2}&=\dfrac{2\pm\sqrt{(-2)^2-4*(-4)*2}}{-8}\\
+  Resusbsitution:\\
+  \Rightarrow
+  \left\{\begin{array}{rccl}
+    \sin(x)&=\dfrac{2+\sqrt{20}}{-8}\\
+    \sin(x)&=\dfrac{2-\sqrt{20}}{-8}
+  \end{array}\right\\
+  \Rightarrow\mathbb{L}=\{\dfrac{1}{6}\pi;\dfrac{5}{6}\pi;\dfrac{3}{2}\pi\}
+\end{align*}
+\subsubsection{Hinreichende Bedingung}
+\begin{align*}
+  f''(x)&\neq0\\
+  \Rightarrow
+  \left\{\begin{array}{rccl}
+    f''(\dfrac{1}{6}\pi)&\stackrel{?}{=}0\\\\
+    f''(\dfrac{5}{6}\pi)&\stackrel{?}{=}0\\\\
+    f''(\dfrac{3}{2}\pi)&\stackrel{?}{=}0
+  \end{array}\right\\
+  \Leftrightarrow
+  \left\{\begin{array}{rccl}
+    8\sin(\dfrac{1}{6}\pi)\cos(\dfrac{1}{6}\pi)-2\sin(\dfrac{1}{6}\pi)&\stackrel{?}{=}0\\\\
+    8\sin(\dfrac{5}{6}\pi)\cos(\dfrac{5}{6}\pi)-2\sin(\dfrac{5}{6}\pi)&\stackrel{?}{=}0\\\\
+    8\sin(\dfrac{3}{2}\pi)\cos(\dfrac{3}{2}\pi)-2\sin(\dfrac{3}{2}\pi)&\stackrel{?}{=}0
+  \end{array}\right\\
+  \Leftrightarrow
+  \left\{\begin{array}{rccl}
+    8*\dfrac{1}{2}*\dfrac{\sqrt{3}}{2}-2*\dfrac{\sqrt{3}}{2}&\stackrel{!}{\neq}&0&,  <0 \Rightarrow HP\\
+    8*\dfrac{1}{2}*-\dfrac{\sqrt{3}}{2}-2*-\dfrac{\sqrt{3}}{2}&\stackrel{!}{\neq}&0&,  >0 \Rightarrow TP\\
+    8*(-1)(0)-2(0)&\stackrel{!}{=}&0& \Rightarrow \text{kein } EP
+  \end{array}\right\\
+\end{align*}
+\subsubsection{Ergebnis}
+Auf dem Intervall $[0;2\pi]$  besitzt K den Hochpunkt H$(\dfrac{1}{6}\pi|f(\dfrac{1}{6}\pi))$ und den Tiefpunk T$(\dfrac{5}{6}\pi|f(\dfrac{5}{6}\pi))$.\\
+$\Leftrightarrow$ H$(\dfrac{1}{6}\pi|\dfrac{3}{2}\sqrt{3})$ und T$(\dfrac{5}{6}\pi|-\dfrac{3}{2}\sqrt{3})$.
+\subsection{Wendestellen}
+\subsubsection{Notwendige Bedingung}
+\begin{align*}
+  f''(x)=0\\
+  \Leftrightarrow -8\sin(x)\cos(x)-2\cos(x)=0\\
+  \Leftrightarrow \cos(x)(-2-8\sin(x))=0\\
+  \stackrel{SdN}{\Rightarrow}
+  \left\{\begin{array}{rccl}
+    \cos(x)&=&0\\
+    \sin(x)&=&-\dfrac{1}{4}
+  \end{array}\right\\
+  \Rightarrow \mathbb{L}=\{\dfrac{1}{2}\pi;\dfrac{3}{2}\pi;\sim3,394;\sim6,031\}
+\end{align*}
+\subsubsection{Hinreichende Bedingung}
+
+\begin{align*}
+  f'''(x)&\neq0\\
+  \Rightarrow
+  \left\{\begin{array}{rccl}
+    f'''(\dfrac{1}{2}\pi)&\stackrel{?}{=}0\\\\
+    f'''(\dfrac{3}{2}\pi)&\stackrel{?}{=}0\\\\
+    f'''(3,394)&\stackrel{?}{=}0\\\\
+    f'''(6,031)&\stackrel{?}{=}0
+  \end{array}\right\\
+  \Leftrightarrow
+  \left\{\begin{array}{rccl}
+    16\sin^2(\dfrac{1}{2}\pi)+\sin(\dfrac{1}{2}\pi)-8&\stackrel{?}{=}0\\\\
+    16\sin^2(\dfrac{3}{2}\pi)+\sin(\dfrac{3}{2}\pi)-8&\stackrel{?}{=}0\\
+    16\sin^2(3,394)+\sin(3,394)-8&\stackrel{?}{=}0\\
+    16\sin^2(6,031)+\sin(6,031)-8&\stackrel{?}{=}0
+  \end{array}\right\\
+  \Leftrightarrow
+  \left\{\begin{array}{rccl}
+    16*1+1-8&\stackrel{!}{\neq}&0&,>0\Rightarrow WP\\
+    16*1-1-8&\stackrel{!}{\neq}&0&,>0,\text{ außerdem: } f'(\dfrac{3}{2}\pi)=0\Rightarrow Sattelpunkt\\
+    -7,5&\stackrel{!}{=}&0&,<0\Rightarrow WP\\
+    -7,5&\stackrel{!}{=}&0&,<0\Rightarrow WP&
+  \end{array}\right\\
+\end{align*}
+\subsubsection{Ergebnis}
+Auf dem Intervall $[0;2\pi]$  besitzt K die Wendepunkte $(\dfrac{1}{2}\pi|f(\dfrac{1}{2}\pi))$, $(3,394|f(3,394))$, $(6,031|f(6,031))$ und den Sattelpunkt $(\dfrac{3}{2}\pi|f(\dfrac{3}{2}\pi))$.\\
+\Leftrightarrow $W_1(\dfrac{1}{2}\pi|0)$, $W_2(3,394|-1,452)$, $W_3(6,031|1,452)$, $S(\dfrac{3}{2}\pi|0)$.\\
+\subsection{Schaubild}
+\definecolor{ccqqqq}{rgb}{0.8,0,0}
+\definecolor{cqcqcq}{rgb}{0.75,0.75,0.75}
+\begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1.0cm,y=1.0cm]
+  \draw [color=cqcqcq,dash pattern=on 1pt off 1pt, xstep=1.0cm,ystep=1.0cm] (-0.62,-3.28) grid (7.22,3.26);
+  \draw[->,color=black] (-0.62,0) -- (7.22,0);
+  \foreach \x in {,1,2,3,4,5,6,7}
+  \draw[shift={(\x,0)},color=black] (0pt,-2pt) node[below] {\footnotesize $\x$};
+  \draw[color=black] (7.04,0.04) node [anchor=south west] { x};
+  \draw[->,color=black] (0,-3.28) -- (0,3.26);
+  \foreach \y in {-3,-2,-1,1,2,3}
+  \draw[shift={(0,\y)},color=black] (2pt,0pt) -- (-2pt,0pt) node[left] {\footnotesize $\y$};
+  \draw[color=black] (0.05,3.05) node [anchor=west] { y};
+  \draw[color=black] (0pt,-10pt) node[right] {\footnotesize $0$};
+  \draw[color=ccqqqq] (1.5,2.5) node {K};
+  \clip(-0.62,-3.28) rectangle (7.22,3.26);
+  \draw[line width=1.6pt,color=ccqqqq, smooth,samples=100,domain=-0.6249016652708163:7.217846281536262] plot(\x,{2*cos(((\x))*180/pi)+2*sin(((\x))*180/pi)*cos(((\x))*180/pi)});
+\end{tikzpicture}
+\subsection{Symmetrie}
+K ist punktsymmetrisch zu $W_1$, denn es gilt:
+\begin{align*}
+  f(\dfrac{1}{2}\pi+x)&=-1*f(\dfrac{1}{2}\pi-x)\\
+  \Leftrightarrow
+  2\cos(\dfrac{1}{2}\pi+x)+2\sin(\dfrac{1}{2}\pi+x)\cos(\dfrac{1}{2}\pi+x)&=-1*(2\cos(\dfrac{1}{2}\pi-x)+2\sin(\dfrac{1}{2}\pi-x)\cos(\dfrac{1}{2}\pi-x))\\
+  \Leftrightarrow
+  -2\sin(x)-2\cos(x)\sin(x)&=-1*(2\sin(x)+2\cos(x)\sin(x))
+\end{align*}
+K ist außerdem zu $S$ punktsymmetrisch, denn es gilt:
+\begin{align*}
+  f(\dfrac{3}{2}\pi+x)&=-1*f(\dfrac{3}{2}\pi-x)\\
+  \Leftrightarrow
+  2\cos(\dfrac{3}{2}\pi+x)+2\sin(\dfrac{3}{2}\pi+x)\cos(\dfrac{3}{2}\pi+x)&=-1*(2\cos(\dfrac{3}{2}\pi-x)+2\sin(\dfrac{3}{2}\pi-x)\cos(\dfrac{3}{2}\pi-x))\\
+  \Leftrightarrow
+  2\sin(x)+2\cos(x)\sin(x)&=-1*(-2\sin(x)-2\cos(x)\sin(x))
+\end{align*}
