Colorboxes "breakable" gemacht. Defs und Theoreme nicht.

--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -37,7 +37,7 @@
 
         \subsubsubsection{Norm eines Vektors}
 
-            \paragraph{} Die Norm eines Vektors ist anschaulich als seine Länge zu interpretieren. Der Betrag, wie sie ebenfalls genannt wird, eines Vektors $\vv{v}$ ist folgendermaßen definiert: $\text{|}\vv{v}\text{|} = \sqrt{\displaystyle\sum_{i=1}^{n}v_{i^2}} ; \vv{v}\in\R^n$.
+            \paragraph{} Die Norm eines Vektors ist anschaulich als seine Länge zu interpretieren. Der Betrag, wie sie ebenfalls genannt wird, eines Vektors $\vv{v}$ ist folgendermaßen definiert: $\text{|}\vv{v}\text{|} = \sqrt{\displaystyle\sum_{i=1}^{n}v_{i}^2} ; \vv{v}\in\R^n$.
             \\
             \begin{tikzpicture}
                 \draw[dashed, ->] (0,0,0) -- (0,0,3);
