--- a/main.tex
+++ b/main.tex
@@ -7,7 +7,7 @@
 \usepackage[margin=2cm]{geometry}	              %Seitenrand
 \usepackage{fancyhdr}	                          %Titelblatt
 \usepackage{graphicx}	                          %Bilder einfügen
-\usepackage{tcolorbox}	                        %dicke Box
+\usepackage[listings,skins,breakable]{tcolorbox}
 \usepackage{tikz}                               %Grafiken zeichnen
 \usepackage{mdframed}	                          %Box			%\begin{mdframed} 		und			%\end{mdframed}
 \usepackage{epstopdf}
