--- a/style.tex
+++ b/style.tex
@@ -32,7 +32,7 @@
 
 %Beweis:
 \newenvironment{Beweis}
-  {\begin{tcolorbox}[colback=grey!5!white,colframe=grey!75!black,opacityframe=0.5, opacitybacktitle=0.5,sharpish corners,boxrule=0pt,frame hidden,title=Beweis]}
+  {\begin{tcolorbox}[colback=grey!5!white,colframe=grey!75!black,opacityframe=0.5, opacitybacktitle=0.5,sharpish corners,boxrule=0pt,frame hidden,title=Beweis,breakable,break at=25cm,pad at break=1mm,]}
   {\end{tcolorbox}}
 
 
