Problem mit minipage Kapitel 2

--- a/kap2/kap2.tex
+++ b/kap2/kap2.tex
@@ -19,3 +19,33 @@ Dann gilt für ein beliebiges Startglied $a_{x}$ der Folge: $s_{n}=\sum\limits_{
 
 		\section{Artithmetische Reihen}
 
+\begin{Definition}
+Wenn $s_{n}$ die Summe der ersten $n$ Folgeglieder einer arithmetischen Folge ist, heißt sie arithmetische Reihe.
+\end{Definition}
+
+	\subsection{Gauß'sche Summenformel}
+
+Die Gauß'sche Summenformel bezeichnet die Summe der $n$ ersten natürlichen Zahlen, also:\\
+$1+2+3+...+n=\sum\limits_{k=1}^{n}k=\frac{n(n+1)}{2}$\\
+
+\begin{minipage}{0.5*\linewidth}
+\underline{Begründung:}\\
+\begin{tabular}{c∣c∣c∣c∣c∣c∣c}
+&1&2&3&4&...&n\\
+\hline
+&n&n-1&n-2&n-3&...&1\\
+\hline
+\sum&n+1&n+1&n+1&n+1&...&n+1\\
+\end{tabular}
+\end{minipage}
+\hfill
+\begin{minipage}{0.5*\linewidth}
+So sieht man also, dass wenn man die vorher bestimmte Reihe mit sich selbst addiert (ein Mal davon "falschrum"), man $n$ Mal $n+1$ bekommt. Um dann den Wert einer einzelnen Reihe zu bekommen teilt man durch zwei.
+\end{minipage}
+
+		\section{Geometrische Reihen}
+
+\begin{Definition}
+Wenn $s_{n}$ die Summe der ersten $n$ Folgeglieder einer geometrischen Folge ist, heißt sie geometrischen Reihe.
+\end{Definition}
+
