--- a/kap1/kap1.tex
+++ b/kap1/kap1.tex
@@ -84,6 +84,10 @@ Letzteres gilt auch für beliebige Folgeglieder, also ist $a_{n}=a_{p}+(n-p)\cdo
 $a_{n}=a_{n-1}+3;a_{0}=0\Leftrightarrow a_{n}=0+n\cdot3$
 \end{Beispiel}
 
+\begin{Bemerkung}
+Jedes Folgeglied einer solchen Folge ist das arithmetische Mittel seines Vorgängers und Nachgängers: $a_{n}=\frac{a_{n-1}+a_{n+1}}{2}$
+\end{Bemerkung}
+
 	\subsection{Geometrische Folgen}
 
 \begin{Definition}
@@ -106,6 +110,10 @@ Letzteres gilt auch für beliebige Folgeglieder, also ist $a_{n}=a_{p}\cdot q^{n
 $a_{n}=a_{n-1}\cdot3;a_{0}=2\Leftrightarrow a_{n}=2\cdot3^n$
 \end{Beispiel}
 
+\begin{Bemerkung}
+Jedes Folgeglied einer solchen Folge ist das geometrische Mittel seines Vorgängers und Nachgängers: $a_{n}=\sqrt{a_{n-1}\cdot a_{n+1}}$
+\end{Bemerkung}
+
 		\section{Klassifizierung von Folgen}
 
 
@@ -118,25 +126,6 @@ $a_{n}=a_{n-1}\cdot3;a_{0}=2\Leftrightarrow a_{n}=2\cdot3^n$
 \subsubsection{Definition}
 \subsubsection{Epsilon-n0-Definition}
 \subsubsection{Grenzwertsätze}
-
-%Nur dann verwenden, falls es etwas anderes als das, was drunter ist!
-%\usetikzlibrary{arrows}\pagestyle{empty}\begin{document}\definecolor{sexdts}{rgb}{0.1803921568627451,0.49019607843137253,0.19607843137254902}\definecolor{cqcqcq}{rgb}{0.7529411764705882,0.7529411764705882,0.7529411764705882}\begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1cm,y=1cm]\draw [color=cqcqcq,, xstep=1cm,ystep=1cm] (-4.360599654045747,-5.0632135306553865) grid (10.553872765712082,5.546050355564091);\draw[->,color=black] (-4.360599654045747,0) -- (10.553872765712082,0);\foreach \x in {-4,-3,-2,-1,1,2,3,4,5,6,7,8,9,10}\draw[shift={(\x,0)},color=black] (0pt,2pt) -- (0pt,-2pt) node[below] {\footnotesize $\x$};\draw[->,color=black] (0,-5.0632135306553865) -- (0,5.546050355564091);\foreach \y in {-5,-4,-3,-2,-1,1,2,3,4,5}\draw[shift={(0,\y)},color=black] (2pt,0pt) -- (-2pt,0pt) node[left] {\footnotesize $\y$};\draw[color=black] (0pt,-10pt) node[right] {\footnotesize $0$};\clip(-4.360599654045747,-5.0632135306553865) rectangle (10.553872765712082,5.546050355564091);\draw[line width=2pt,color=sexdts,smooth,samples=100,domain=-4.360599654045747:10.553872765712082] plot(\x,{(\x)^(2)});\end{tikzpicture}\end{document}
-
-
-\definecolor{sexdts}{rgb}{0.1803921568627451,0.49019607843137253,0.19607843137254902}
-\definecolor{cqcqcq}{rgb}{0.7529411764705882,0.7529411764705882,0.7529411764705882}
-\begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=1cm,y=1cm]
-	\draw [color=cqcqcq,, xstep=1cm,ystep=1cm] (-4.360599654045747,-5.0632135306553865) grid (10.553872765712082,5.546050355564091);
-	\draw[->,color=black] (-4.360599654045747,0) -- (10.553872765712082,0);
-	\foreach \x in {-4,-3,-2,-1,1,2,3,4,5,6,7,8,9,10}
-	\draw[shift={(\x,0)},color=black] (0pt,2pt) -- (0pt,-2pt) node[below] {\footnotesize $\x$};
-	\draw[->,color=black] (0,-5.0632135306553865) -- (0,5.546050355564091);
-	\foreach \y in {-5,-4,-3,-2,-1,1,2,3,4,5}
-	\draw[shift={(0,\y)},color=black] (2pt,0pt) -- (-2pt,0pt) node[left] {\footnotesize $\y$};
-	\draw[color=black] (0pt,-10pt) node[right] {\footnotesize $0$};
-	\clip(-4.360599654045747,-5.0632135306553865) rectangle (10.553872765712082,5.546050355564091);
-	\draw[line width=2pt,color=sexdts,smooth,samples=100,domain=-4.360599654045747:10.553872765712082] plot(\x,{(\x)^(2)});
-\end{tikzpicture}
 
 
 
