command {GTR-Tipp}

--- a/kap1/kap1.tex
+++ b/kap1/kap1.tex
@@ -48,6 +48,10 @@ $a_{n}=a_{n-1}+2;a_{1}=1$
 Für manche Folgen sind beide Darstellungen möglich, wobei die explizite Darstellung oftmals viel praktischer ist, da die Berechnung der Folgeglieder anhand der rekursiven Darstellung schnell sehr aufwendig wird.
 \end{Bemerkung}
 
+\begin{GTR-Tipp}
+Wie man im GTR macht
+\end{GTR-Tipp}
+
 \subsubsection{Web-Diagramme}
 Hier handelt es sich um eine graphisches Verfahren, das dazu dient, das Verhalten einer Folge, deren Darstellung rekursiv ist, zu untersuchen.\\
 Dazu muss man der rekursiven Folgenvorschrift eine Funktion $f(a_{n-1})=a_{n}$ zuordnen, sodass - grob gesagt - " die Funktion das Gleiche mit x macht, dass die Folge macht, um von $a_{n}$ auf $a_{n+1}$ zu kommen. Zusätzlich zeichnet man in ein kartesisches Koordinatensystem die Hauptdiagonale ein (entspricht dem Graphen von $f(x)=x$).\\
@@ -57,6 +61,9 @@ Dann trägt man das erste Folgeglied auf die Abzissenachse ein und verbindet ihn
 Dieses Verfahren kann aber ausschließlich bei rekusiven Folgen angewendet werden, bei denen keine zusätzliche Abhängigkeit von $n$ vorliegt (Beispiel: $a_{n}=3\cdot a_{n-1}+3+4\cdot n$) oder die Rekursivitätsebene den 1. Grad überschreitet, was bedeutet, dass $a_{n}$ nicht nur in Abhängigkeit von $a_{n-1}$ beschrieben wird, sondern zusätzlich von mindestens $a_{n-2}$ (Beispiel: die Fibonacci-Folge).\\
 \end{Bemerkung}
 
+\begin{GTR-Tipp}
+Verwendung mit dem GTR
+\end{GTR-Tipp}
 
 
 		\section{Auffällige Folgen}
