--- a/style.tex
+++ b/style.tex
@@ -83,3 +83,15 @@
      skipabove=.5\baselineskip
    ]\underline{Bemerkung:}\\}
 {\end{mdframed}}
+
+\newenvironment{GTR-Tipp}
+  {\par\noindent\normalfont\par\nopagebreak%
+  \begin{mdframed}[
+     linewidth=2pt,
+     linecolor=grey,
+     bottomline=false,topline=false,rightline=false,
+     innerrightmargin=0pt,innertopmargin=0pt,innerbottommargin=0pt,
+     innerleftmargin=1em,% Distanz zwischen vertikaler Strich & Inhalt
+     skipabove=.5\baselineskip
+   ]\underline{GTR-Tipp:}\\}
+{\end{mdframed}}
