--- a/kap1/kap1.tex
+++ b/kap1/kap1.tex
@@ -92,7 +92,7 @@ $a_{n}=a_{n-1}+3;a_{0}=0\Leftrightarrow a_{n}=0+n\cdot3$
 \end{Beispiel}
 
 \begin{Bemerkung}
-Jedes Folgeglied einer solchen Folge ist das arithmetische Mittel seines Vorgängers und Nachgängers: $a_{n}=\frac{a_{n-1}+a_{n+1}}{2}$
+Jedes Folgeglied einer solchen Folge ist das arithmetische Mittel seines Vorgängers und Nachgängers: $a_{n}=\dfrac{a_{n-1}+a_{n+1}}{2}$
 \end{Bemerkung}
 
 	\subsection{Geometrische Folgen}
