--- a/kap2/kap2.tex
+++ b/kap2/kap2.tex
@@ -4,7 +4,7 @@
 Eine Reihe ist eine Folge, deren Glieder die Partialsummen einer anderen Folge ist. Das bedeutet, dass das $n-te$ Glied der Reihe, die Summe der ersten $n$ Glieder einer anderen Folge ist. \\
 Man hat also:
 
-\begin{enumerate} 
+\begin{enumerate}
 \item Mit Startglied $a_{0}$: $s_{n}=\sum\limits_{i=0}^{n-1}a_{i}$
 \item Mit Startglied $a_{1}$: $s_{n}=\sum\limits_{i=1}^{n}a_{i}$
 \item Mit Startglied $a_{x}$: $s_{n}=\sum\limits_{i=x}^{n+x-1}a_{i}$
@@ -26,19 +26,17 @@ Wenn $s_{n}$ die Summe der ersten $n$ Folgeglieder einer arithmetischen Folge is
 	\subsection{Gauß'sche Summenformel}
 
 Die Gauß'sche Summenformel bezeichnet die Summe der $n$ ersten natürlichen Zahlen, also:\\
-$1+2+3+...+n=\sum\limits_{k=1}^{n}k=\frac{n(n+1)}{2}$\\
+$1+2+3+...+n=\sum\limits_{k=1}^{n}k=\frac{n(n+1)}{2}$\\\\
 
-\begin{minipage}{0.5*\linewidth}
-\underline{Begründung:}\\
-\begin{tabular}{c∣c∣c∣c∣c∣c∣c}
-&1&2&3&4&...&n\\
-\hline
-&n&n-1&n-2&n-3&...&1\\
-\hline
-\sum&n+1&n+1&n+1&n+1&...&n+1\\
-\end{tabular}
+\begin{minipage}[c]{0.5\textwidth}
+	\underline{Begründung:}\\
+	\begin{tabular}{c∣c∣c∣c∣c∣c∣c}
+		&1&2&3&4&...&n\\\hline
+		&n&n-1&n-2&n-3&...&1\\\hline
+		\sum&n+1&n+1&n+1&n+1&...&n+1\\
+	\end{tabular}
 \end{minipage}
-\begin{minipage}{0.5*\linewidth}
+\begin{minipage}{0.5\textwidth}
 So sieht man also, dass wenn man die vorher bestimmte Reihe mit sich selbst addiert (ein Mal davon "falschrum"), man $n$ Mal $n+1$ bekommt. Um dann den Wert einer einzelnen Reihe zu bekommen teilt man durch zwei.
 \end{minipage}
 
@@ -47,4 +45,3 @@ So sieht man also, dass wenn man die vorher bestimmte Reihe mit sich selbst addi
 \begin{Definition}
 Wenn $s_{n}$ die Summe der ersten $n$ Folgeglieder einer geometrischen Folge ist, heißt sie geometrischen Reihe.
 \end{Definition}
-
