--- a/kap1/kap1.tex
+++ b/kap1/kap1.tex
@@ -6,7 +6,9 @@ Folgen können auch nur für Teilbereiche von $\N$ definiert sein.\\
 $(a_{n})_{n\in\N}$ bezeichnet die Folge, wobei $a:\N\rightarrow\R$
 \end{Definition}
 
-
+\begin{Bemerkung}
+In einem Ausdruck muss das $n$ immer dasselbe bleiben!
+\end{Bemerkung}
 		\section{Verschiedene Darstellungen}
 
 
