--- a/kap2/kap2.tex
+++ b/kap2/kap2.tex
@@ -45,6 +45,17 @@ So sieht man also, dass wenn man die vorher bestimmte Reihe mit sich selbst addi
 		\section{Geometrische Reihen}
 
 \begin{Definition}
-Wenn $s_{n}$ die Summe der ersten $n$ Folgeglieder einer geometrischen Folge ist, heißt sie geometrischen Reihe.
+Wenn $s_{n}$ die Summe der ersten $n$ Folgeglieder einer geometrischen Folge ist, heißt sie geometrischen Reihe.\\
+Sei eine geometrische Folge $a$ mit Startglied $a_{x}$ und $s$, die entsprechende Reihe, dann gilt\\
+$s_{n}=\sum\limits_{i=x}^{n+x-1}a_{i}=a_{x}\cdot \dfrac{1-q^n}{1-q}$
 \end{Definition}
+
+\begin{Beweis}
+\underline{Allgemein:}\\
+\\
+$(1-q)(1+q+q^2+q^3+...+q^n)\\
+=(1-q)+(q-q^2)+(q^2-q^3)+(q^3-q^4)+...+(q^n-q^{n+1}\\
+=$
+
+\end{Beweis}
 
