--- a/kap2/kap2.tex
+++ b/kap2/kap2.tex
@@ -66,7 +66,7 @@ $(1-q)(1+q+q^2+q^3+...+q^n)\\
 Man hat also $\sum\limits_{k=0}^nq^k=1+q+q^2+q^3+...+q^n=\dfrac{1-q^{n+1}}{1-q}$\\
 Entsprechend ergibt sich $\sum\limits_{k=0}^{n-1}q^k=\underbrace{1+q+q^2+q^3+...+q^{n-1}}_{n\quad Summanden}=\dfrac{1-q^n}{1-q}$\\
 \\
-Somit gilt für eine Reihe $s$, die die Partialsumme einer geometrischen Folge $a$, mit Quotient $q$ und Anfangsglied $a_{x}$, ist folgendes:\\
+Somit gilt für eine Reihe $s$, die die Partialsumme einer geometrischen Folge $a$, mit Quotient $q$ und Anfangsglied $a_{x}$, ist, folgendes:\\
 $s_{n}=\sum\limits_{i=x}^{x+n-1}a_{i}\\
 =a_{x}+a_{x+1}+a_{x+2}+...+a_{x+n-1}\\
 =a_{x}+a_{x}\cdot q+a_{x}\cdot q^{2}+...+a_{x}\cdot q^{n-1}\\
