Anfang Algorythmik, style korrekturen

--- a/kap10/kap10.tex
+++ b/kap10/kap10.tex
@@ -1,14 +1,31 @@
 \chapter{Algorythmik}
-sdffzgkzgs\\
+\section{Algorithmen und Programmierung}
+\begin{Definition}
+	Algorithmen besitzen die folgenden charakteristischen Eigenschaften:
+	\begin{enumerate}
+		\item Eindeutigkeit: ein Algorithmus darf keine widersprüchliche Beschreibung haben. Diese muss eindeutig sein.
+		\item Eindeutigkeit: ein Algorithmus darf keine widersprüchliche Beschreibung haben. Diese muss eindeutig sein.
+		\item Ausführbarkeit: jeder Einzelschritt muss ausführbar sein.
+		\item Finitheit (= Endlichkeit): die Beschreibung des Algorithmus muss endlich sein.
+		\item Terminierung: nach endlich vielen Schritten muss der Algorithmus enden und ein Ergebnis liefern.
+		\item Determiniertheit: der Algorithmus muss bei gleichen Voraussetzungen stets das gleiche Ergebnis liefern.
+		\item   Determinismus: zu jedem Zeitpunkt der Ausführung besteht höchstens eine Möglichkeit der Fortsetzung. Der Folgeschritt ist also eindeutig bestimmt.
+	\end{enumerate}
+\end{Definition}
+\\
+Diese Eigenschaften kann man in der Mathematik genutzt werden, um Probleme zu lösen. Hierfür bedarf es einer einheitlichen Schreibweise.\\
+Insbesondere vor dem Abitur stehen den Schülern mehrere Möglichkeiten zur Verfügung, die im Folgenden behandelt werden.
+\subsection{Pseudocode}
+\subsection{Python}
+\begin{lstlisting}[language=Python]
+	import turtle as t
+	print("I love U")
+	print(69)
+	while True:
+		khdfslh
 
-	\section{Algorithmen und Programmierung}
+\end{lstlisting}
 
-		\subsection{Pseudocode}
-
-		\subsection{Python}
-
-	\section{Algorithmen und mathematische Anwendungen}
-
-		\subsection{Newton-Rhapson Verfahren}
-
-		\subsection{Allgemeines Iterationsverfahren}
+\section{Algorithmen und mathematische Anwendungen}
+\subsection{Newton-Rhapson Verfahren}
+\subsection{Allgemeines Iterationsverfahren}
