--- a/kap4/kap4.tex
+++ b/kap4/kap4.tex
@@ -62,7 +62,7 @@ Es ergeben sich folgende (wissenswerte) Werte:
   \end{tabu}
 
 \end{center}
-\section{Addtions- und Verdopplungssätze}
+\section{Additions- und Verdopplungssätze}
 \begin{Theorem}
   $\cos(a - b) = \cos(a)\cos(b) + \sin(a)\sin(b)$\\
   $\sin(a - b) = \sin(a)\cos(b) - \cos(a)\sin(b)$\\
