--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -171,8 +171,8 @@
 \section{S"atze}
 
 \subsection{Der Satz des Apollinius}
+\begin{small}
 
-\small{
 \begin{Definition}
 Gegeben sind: Eine Strecke $[AB]$ und eine positive Zahl $\lambda \in \R^{+} \backslash \{1\}$. Dann ist die Punktmenge
 
@@ -246,7 +246,7 @@ $\Leftrightarrow & $0$ & $=$ & $x^2\cdot \lambda^2 - 2bx\cdot \lambda^2 +b^2\cdo
 \end{array}
 }
 
-\newpage
+
 
 \item{
 Bevor man zum Ende kommt, kann man noch die Ergebnisse aus 2) benutzen, um $t_{i}$ und $t_{a}$ miteinander zu verrechnen, denn diesen Zusammenhang braucht man gleich.\\
@@ -281,7 +281,7 @@ Damit hat man bewiesen, dass f"ur alle Punkte $X$ die Vektoren $\vv{T_{i}X}$ und
 \end{enumerate}
 \end{Beweis}
 
-\newpage
+
 Die Figur und die Zusammenh"ange, die man durch den Satz des Apollinius erhalten hat, kann man benutzen, um ein wenig mit Winkeln zu spielen: \\
 \\
 \includegraphics[width=5in]{Apollinius_Winkel}\\
@@ -303,5 +303,8 @@ Eine Innenwinkelhalbierende eines Dreiecks teilt die gegen"uberliegende Seite im
 \end{Definition}
  \begin{center}
 \includegraphics[width=4.7in]{Apollinus_Winkelhalbierende_Bild}
-\end{center}}
-\tiny Quelle : Tobias Rave, 06.03.18, Skript 1ere SBC S.68-71
+\end{center}
+\end{small}
+\begin{tiny}
+  Quelle : Tobias Rave, 06.03.18, Skript 1ere SBC S.68-71
+\end{tiny}
