--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,4 @@
 \documentclass[11pt]{report}
-
 \usepackage{amsmath}		                        %Matheschreibweise
 \usepackage{amssymb}                            %&Symbole
 \usepackage{amsfonts}
@@ -15,6 +14,9 @@
 \usepackage[ngerman]{babel}
 \usepackage{tabu}                               %Bessere Tabellen
 \usepackage{esvect}
+\usepackage{listings}                           %für Pseudocode/Code
+\usepackage{color}                              %und dessen Einfärbung
+
 \usetikzlibrary{arrows}
 
 \pagestyle{fancy}
