--- a/kap2/kap2.tex
+++ b/kap2/kap2.tex
@@ -27,9 +27,9 @@ $1+2+3+...+n=\sum\limits_{k=1}^{n}k=\frac{n(n+1)}{2}$\\\\
 \begin{minipage}[c]{0.5\textwidth}
 	\underline{Begründung:}\\
 	\begin{tabular}{c∣c∣c∣c∣c∣c∣c}
-		&1&2&3&4&...&n\\\hline
+		&$1&2&3&4&...&n\\\hline
 		&n&n-1&n-2&n-3&...&1\\\hline
-		\sum&n+1&n+1&n+1&n+1&...&n+1\\
+		\sum&n+1&n+1&n+1&n+1&...&n+1$\\
 	\end{tabular}
 \end{minipage}
 \begin{minipage}{0.5\textwidth}
@@ -67,6 +67,7 @@ Man hat also $\sum\limits_{k=0}^nq^k=1+q+q^2+q^3+...+q^n=\dfrac{1-q^{n+1}}{1-q}$
 Entsprechend ergibt sich $\sum\limits_{k=0}^{n-1}q^k=\underbrace{1+q+q^2+q^3+...+q^{n-1}}_{n\quad Summanden}=\dfrac{1-q^n}{1-q}$\\
 \\
 Somit gilt für eine Reihe $s$, die die Partialsumme einer geometrischen Folge $a$, mit Quotient $q$ und Anfangsglied $a_{x}$, ist, folgendes:\\
+\\
 $s_{n}=\sum\limits_{i=x}^{x+n-1}a_{i}\\
 =a_{x}+a_{x+1}+a_{x+2}+...+a_{x+n-1}\\
 =a_{x}+a_{x}\cdot q+a_{x}\cdot q^{2}+...+a_{x}\cdot q^{n-1}\\
