--- a/main.tex
+++ b/main.tex
@@ -1,13 +1,15 @@
 \documentclass[11pt]{report}
 \usepackage{amsmath}		                        %Matheschreibweise
 \usepackage{amssymb}                            %&Symbole
+\usepackage{mathrsfs}
 \usepackage{amsfonts}
 \usepackage[T1]{fontenc}
 \usepackage[margin=2cm]{geometry}	              %Seitenrand
 \usepackage{fancyhdr}	                          %Titelblatt
 \usepackage{graphicx}	                          %Bilder einfügen
 \usepackage[listings,skins,breakable]{tcolorbox}
-\usepackage{tikz}                               %Grafiken zeichnen
+\usepackage{tikz,pgf}                               %Grafiken zeichnen
+\usetikzlibrary{arrows}
 \usepackage{mdframed}	                          %Box			%\begin{mdframed} 		und			%\end{mdframed}
 \usepackage{epstopdf}
 \usepackage[utf8]{inputenc}
