Zwichenwertsatz  und Grenzwerte

--- a/kap1/kap1.tex
+++ b/kap1/kap1.tex
@@ -118,7 +118,8 @@ $a_{n}=a_{n-1}\cdot3;a_{0}=2\Leftrightarrow a_{n}=2\cdot3^n$
 \end{Beispiel}
 
 \begin{Bemerkung}
-Jedes Folgeglied einer solchen Folge ist das geometrische Mittel seines Vorgängers und Nachgängers: $a_{n}=\sqrt{a_{n-1}\cdot a_{n+1}}$
+Jedes Folgeglied einer solchen Folge ist das geometrische Mittel seines Vorgängers und Nachgängers:\\
+ $a_{n}=\sqrt{a_{n-1}\cdot a_{n+1}}$
 \end{Bemerkung}
 
 		\section{Klassifizierung von Folgen}
