--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -397,6 +397,5 @@ Eine Innenwinkelhalbierende eines Dreiecks teilt die gegen"uberliegende Seite im
 \includegraphics[width=4.7in]{Apollinus_Winkelhalbierende_Bild}
 \end{center}
 \end{small}
-\begin{tiny}
-  Quelle : Tobias Rave, 06.03.18, Skript 1ere SBC S.68-71
-\end{tiny}
+Quelle (Apollinus) : Tobias Rave, 06.03.18, Skript 1ere SBC S.68-71
+
